--- a/vertical.html
+++ b/vertical.html
@@ -9,7 +9,7 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 		<!-- Custom CSS styles go in this file -->
-    	<link href="styles-1.css" rel="stylesheet">
+    	<link href="css/styles-1.css" rel="stylesheet">
 
     	<!-- JavaScript go in this file -->
     	<script src="js/colorwheel.js"></script>
