--- a/vertical.html
+++ b/vertical.html
@@ -47,16 +47,16 @@
 	</div>
 
 	<div id="color-sections">
-		<div class="color-section" id="pink" onclick="lightsOn()"></div>
-		<div class="color-section" id="pink" onclick="pinkGirl()"></div>
-		<div class="color-section" id="red" onclick="redGirl()"></div>
-		<div class="color-section" id="orange" onclick="orangeGirl()"></div>
-		<div class="color-section" id="yellow" onclick="yellowGirl()"></div>
-		<div class="color-section" id="green" onclick="greenGirl()"></div>
-		<div class="color-section" id="turquoise" onclick="turquoiseGirl()"></div>
-		<div class="color-section" id="blue" onclick="blueGirl()"></div>
-		<div class="color-section" id="purple" onclick="purpleGirl()"></div>
-		<div class="color-section" id="pink" onclick="lightsOff()"></div>
+		<div class="color-section" id="pink" onmouseover="lightsOn()"></div>
+		<div class="color-section" id="pink" onmouseover="pinkGirl()"></div>
+		<div class="color-section" id="red" onmouseover="redGirl()"></div>
+		<div class="color-section" id="orange" onmouseover="orangeGirl()"></div>
+		<div class="color-section" id="yellow" onmouseover="yellowGirl()"></div>
+		<div class="color-section" id="green" onmouseover="greenGirl()"></div>
+		<div class="color-section" id="turquoise" onmouseover="turquoiseGirl()"></div>
+		<div class="color-section" id="blue" onmouseover="blueGirl()"></div>
+		<div class="color-section" id="purple" onmouseover="purpleGirl()"></div>
+		<div class="color-section" id="pink" onmouseover="lightsOff()"></div>
 	</div>
 
 </body>
