--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
+		<!--Garamond font from Google Fonts API-->
+		<link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
+
 		<!-- Custom CSS styles go in this file -->
     	<link href="css/styles.css" rel="stylesheet">
 
@@ -21,7 +24,7 @@
 		<p>schedule</p>
 	</div>
 	<div id="right" class="menu">
-		<p>mentor</p>
+		<p>contact</p>
 		<p>resources</p>
 	</div>
 
@@ -52,7 +55,7 @@
 		</g>
 			<path id="laptop" fill="#A6A6A6" d="M137.932,336.226l-5.256-63.217c-0.021-3.857,0.37-5.422,4.984-5.892l120.744-10.041
 	c6.207-0.045,6.599,0.933,7.414,6.479l3.478,67.904l0.198,5.382L139.64,347.723L137.932,336.226z"/>
-<path id="hair" fill="#A27994" d="M159.55,252.571c0,0,6.265-4.883,9.052-21.801c0,0,10.534,4.811,11.572,14.891c0,0,0.057,1.996,0.473-0.131
+<path class="hair" fill="#A27994" d="M159.55,252.571c0,0,6.265-4.883,9.052-21.801c0,0,10.534,4.811,11.572,14.891c0,0,0.057,1.996,0.473-0.131
 	c0,0,2.37-14.719-4.179-23.678c0,0,11.565,5.117,17.041,16.129c0,0,1.142,2.215,0.13,3.648c0,0-0.24,0.356-0.225,0.748
 	c0,0,0.029,0.344,0.208,0.131c0,0,0.829-0.863,0.634-4.334c0,0,0.294-10.361-14.146-34.669c0,0,11.389-25.946-10.125-56.039
 	c0,0,5.344-12.252,2.215-26.066c0,0-13.945-9.383-16.953-31.436c0,0,14.199-2.447,29.578-27.342c0,0,0.668-1.174,1.955-2.395
@@ -201,7 +204,7 @@
 		<div class="color-section" id="blue" onmouseover="blueGirl()"></div>
 		<div class="color-section" id="purple" onmouseover="purpleGirl()"></div>
 	</div>
-	<svg id="down-triangle" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg id="down-triangle" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 			 width="430px" height="150px" viewBox="0 0 430 150" enable-background="new 0 0 430 150" xml:space="preserve">
 			<g>
 			<path id="shape" fill="#A27994" d="M225.15,126.753c-6.493,4.028-17.096,3.993-23.562-0.079L4.256,2.403C-2.21-1.668-1.248-5.012,6.393-5.027
@@ -325,9 +328,116 @@
 </g>
 		</svg>
 	<div id="about-section">
-		Pearl Hacks is a weekend event bringing together women from all over the United States to work on projects with mentors from software engineering companies.<br><br>
-		Hacking doesn’t mean breaking into anything - It’s breaking your ideas out of the confines of your mind and learning how to make them a reality.<br><br>
-		At Pearl Hacks, we will start out with a variety of technical workshops suited for all skill levels and then encourage you to work with other participants to build something using what you learned. 
+		<p id="intro">Pearl Hacks is a weekend event bringing together women from all over the United States to work on projects with mentors from software engineering companies.
+			<br><br>
+			Hacking doesn’t mean breaking into anything - It’s breaking your ideas out of the confines of your mind and learning how to make them a reality.
+			<br><br>
+			At Pearl Hacks, we will start out with a variety of technical workshops suited for all skill levels and then encourage you to work with other participants to build something using what you learned.<br><br>
+			<strong>Register now ></strong>
+		</p>
+		<p id="middle"><em>How much does it cost?</em><br>
+				Pearl Hacks is completely free. We provide all meals (plus snacks and drinks!) while you are here, as well as a nap room and colorful swag from our sponsors.
+			<br><br>
+			<em>How will I get to Chapel Hill?</em><br>
+				We will be sending busses to universities in North Carolina, Virginia, Maryland and Georgia. Otherwise, we will reimburse you for carpooling with at least three participants in your car. We also have a limited amount of funding for flight reimbursement that we will distribute as we are able.
+			<br><br>
+			<em>What if I don’t have a team?</em><br>
+				Don’t sweat it! Pearl Hacks is all about meeting new people. If you have an awesome idea, you’ll definitely be able to find people to work with you. If you don’t have an idea, be on the lookout for projects that sound interesting that you can join! Please limit teams to no more than four participants.
+		</p>
+		<p id="end"><em>Wait, you said build?</em><br>
+				The best thing about tech is that you can build something with only your laptop and your brain. We will be providing extra hardware for you to play around with in your projects.
+			<br><br>
+			<em>What should I bring?</em><br>
+				Bring your laptop, phone, chargers,<br>toiletries, a sleeping bag and pillow,<br>a change of clothes, and<br>a well-rested open mind.
+		</p>
+		<svg id="side-girl" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="560px" height="560px" viewBox="0 0 560 560" enable-background="new 0 0 560 560" xml:space="preserve">
+<path d="M523.817,545.063c-35.067,21.313-80.067,6.813-80.067,6.813c-23.5-8-42.867-21.3-49.192-24.826
+	c-4.821-2.688-34.091-21.597-40.071-26.219c-3.986-3.08-3.549-5.518-2.736-6.955l54.166-93.333c3.668-1,17.334,8.333,17.334,8.333
+	c20.5,14,27.5,16,27.5,16c13.5-27,5.5-63.5,5.5-63.5c-35.333-5.166-26-38.833-26-38.833c1.125-9.292,5.588-16.855,5.667-17
+	C440.25,297.627,456,282.752,456,282.752c22.666-18.667,23.25-42.542,23.25-42.542c2.667-13.333-11-24.833-11-24.833
+	s-13.734,11.637-19.47,14.179c-7.537,3.341-12.53-5.679-12.53-5.679s-4.942-9.467-7.679-8.923c-3.239,0.645-3.17-1.857-2.826-3.357
+	c0.362-1.582,3.104-7-1.408-4.944c-2.512,1.144-2.321-2.056-2.321-2.056c-0.084-5.083-3.153-7.433-3.153-7.433
+	s-3.234,2.412-8.083,2.839c-5.654,0.498-2.83-7.489-2.83-7.489s5.551-14.888-0.404-17.253c-5.447-2.164-9.545-6.885-9.545-6.885
+	l2.271-5.59v-30.302h37.589l71.391,31.392c0,0-5.333,21,13.334,46.333c0,0,27.666,25.667,35.666,80.667c0,0,7,40-7,93
+	c0,0-12,46.999-2,83.666C549.25,467.543,563.385,521.583,523.817,545.063z"/>
+<path class="hair" fill="#A27994" d="M545.5,117.002l-0.25-0.75c10.667-14.042-4.332-22.374-4.332-22.374c-4.168-15.501-17.666-9-17.666-9
+	c-11.002-9.001-16.591,1.773-16.591,1.773s-6.411-14.774-24.188-22.714c-24.001-10.719-43.652,6.245-43.652,6.245
+	c-23.071,1.694-27.888,22.958-27.888,22.958c-7.017,1.07-11.316,9.329-11.316,9.329c-9.7,5.741-14.367,18.408-14.367,18.408
+	s-6.362,16.528,0.833,36.083c7.083,19.25,23.492,16.034,22.021,15.68c-3.854-0.929-8.083-6.406-8.083-6.406
+	c9.146,8.976,35.733-1.344,25.867-1c-16.055,0.56-22.634-29.504-22.634-29.504c6.871,17.847,24.542,21.831,29.996,22.147
+	c11.816,0.687,25.5-6.833,25.5-6.833s16.92-5.198,19.277,11.742c1.474,10.591,5.807,15.341,5.807,15.341s2.916,4.75,12.249,8.75
+	c0,0,11.167,7,11.001,18.5c-0.129,8.916,1.917-1.083,1.917-1.083s2.248-10.583-7.085-23.583c0,0-3.333-5.667,0.667-10.667
+	c0,0,17.333,8.167,17-21.5c0,0,9.333,7.833,11.334-6C530.917,142.544,554.25,140.21,545.5,117.002z"/>
+<path d="M63.173,556.997c-12.036-0.099-45.494-5.237-35.143-24.873c1.312-2.489,8.788-6.479,11.337-7.786
+	c0.556-0.285,1.167-0.449,1.79-0.489c67.071-4.222,67.081-15.217,75.182-20.018c13.518-8.011,37.513-29.831,39.826-31.945
+	c0.123-0.111,0.235-0.227,0.345-0.352c42.27-47.997,81.694-98.135,82.48-102.461c0.906-4.982,20.753-26.068,26.278-31.859
+	c0.9-0.942,2.156-1.449,3.458-1.398l22.476,0.848c0.77,0.029,1.521,0.254,2.182,0.653l131.235,79.333
+	c1.221,0.738,2.023,2.001,2.171,3.421c1.87,18.084,12.248,137.497-45.552,89.161c-46.104-38.557-75.571-75.596-87.84-92.348
+	c-2.215-3.022-6.943-2.234-8.015,1.357c-6.677,22.39-34.495,53.637-65.841,63.133c-31.555,9.56-51.995,35.131-57.166,42.204
+	c-0.806,1.102-1.049,2.51-0.713,3.833c6.108,24.011-24.795,25.901-33.744,22.743c-14.875-5.25-25.793,2.104-33.376,3.59
+	C94.544,553.744,77.395,557.114,63.173,556.997"/>
+<path d="M427.249,419.669l-7.536,53.276l-27.72,20.443c0,0-101.379-68.404-109.082-109.307
+	c-7.702-40.904-171.922,140.249-171.922,140.249l-41.214,23.327l-35.314-9.75c-3.558-0.982-6.648-3.333-8.298-6.635
+	c-2.273-4.549-1.953-10.848,12.679-14.885c26.344-7.269,61.794-28.808,61.794-28.808s33.865-24.703,43.392-33.584
+	c9.797-9.136,86.763-95.333,98.047-111.84c8.031-11.749,21.977-16.129,28.567-17.404c3.906-0.757,8.002-0.376,10.64,0l9.345,1.869
+	c2.688,0.849,10.133,1.206,13.635,6.098c0.113,0.158,0.252,0.295,0.414,0.401L361.2,371.9"/>
+<path fill="#A6A6A6" d="M181.878,322.165l-2.95-3.325c-0.369-1.293-0.928-3.088-1.029-4.356l-1.331-11.24
+	c0.026-0.2,0.03-0.403,0.012-0.604l-9.489-131.447c-0.191-2.164,2.047-3.714,4.006-2.774l5.32,5.543
+	c1.417,0.833,1.746,2.328,1.848,3.295l14.147,130.051c0.143,1.349,1.231,2.402,2.585,2.502l131.808,14.464
+	c1.549,0.112,2.709,1.462,2.592,3.01l-0.578,2.604c-0.117,1.539-1.459,2.695-3,2.583l-140.32-8.56
+	C185.131,323.803,181.878,322.165,181.878,322.165z"/>
+<path d="M541.727,251.195c2.849,5.731-0.622,23.827-4.66,32.404c-4.037,8.578-48.048,70.816-64.857,85.34
+	c-16.81,14.524-26.501,13.871-29.959,13.604c-4.333-0.334-11.667-5-11.667-5c-23.333-14.334-32.825-32.337-37.767-36.61
+	c-3.146-2.722-39.566-55.356-42.816-54.057c-8.75,3.5-15.344,2.454-27.25-5.25c-8.5-5.5-18.437-7.303-22.834-5.084
+	c-20.033,10.109-22.666,6.666-22.666,6.666s9.264-6.018,16.004-10.384c8.938-5.792-17.676,4.656-20.337,5.719
+	c-5.833,2.333-9.167,1.333-9.167,1.333l10.167-7.334c0,0-10.497,4.171-13.833,3c-3.336-1.171,0.496-3.447,0.496-3.447l12.198-6.9
+	c29.637-19.836,75.536-5.48,87.775,2.199c1.596,1.001,5.368,3.146,6.697,4.481c42.186,42.416,82.5,64.5,82.5,64.5
+	c8.591-35.37,54.463-100.334,54.463-100.334S530.203,228.014,541.727,251.195z"/>
+<path d="M493.867,232.562c0,0-49.064,80.875-54.576,116.833c0,0-46.718-9.677-93.088-50.026c0,0-43.285-17.658-90.43,4.007
+	l-9.992,4.192c0,0-3.622,2.582-0.197,3.477c3.424,0.896,13-1.501,13-1.501l-8.5,6.333c0,0,1.167,1.5,7.833-0.5
+	c2.741-0.822,27.684-12.061,18.911-6.064c-7.411,5.064-16.411,10.898-16.411,10.898s7.29,3.005,24.833-7.834
+	c4.18-2.582,15.167,0,22.334,5.5c3.532,2.711,14.166,8.75,26.416,3.5c3.213-1.377,44.38,43.212,47.75,45.669
+	c5.291,3.857,22.167,19.333,46.168,28.166c0,0,5.332,2.5,11.309,4.406c3.311,1.057,11.691,4.76,24.146-9.069
+	c14.83-16.468,62.559-98.232,65.844-107.111c3.283-8.88,5.73-27.573,1.85-32.682C527.186,245.649,519.982,222.849,493.867,232.562"
+	/>
+<g>
+	<g>
+		<defs>
+			
+				<rect id="SVGID_1_" x="469.149" y="208.988" transform="matrix(-0.9887 0.1499 -0.1499 -0.9887 1026.7744 371.9273)" width="60.434" height="31.367"/>
+		</defs>
+		<clipPath id="SVGID_2_">
+			<use xlink:href="#SVGID_1_"  overflow="visible"/>
+		</clipPath>
+		<path clip-path="url(#SVGID_2_)" fill="#FFE7CB" d="M503.684,226.921c-2.561-2.95-2.118-7.433,0.985-10.016
+			c3.105-2.583,7.699-2.285,10.26,0.664c2.561,2.951,2.119,7.435-0.985,10.018C510.836,230.168,506.244,229.871,503.684,226.921"/>
+		<path clip-path="url(#SVGID_2_)" fill="#FFECC7" d="M504.979,225.843c-1.969-2.268-1.631-5.72,0.761-7.707
+			c2.389-1.988,5.924-1.759,7.894,0.512c1.97,2.268,1.631,5.72-0.759,7.707C510.484,228.344,506.95,228.114,504.979,225.843"/>
+		<path clip-path="url(#SVGID_2_)" fill="#FFF7EA" d="M511.926,222.412c1.152,1.327,0.954,3.343-0.442,4.505
+			c-1.396,1.162-3.462,1.028-4.613-0.299s-0.953-3.344,0.443-4.505C508.71,220.952,510.775,221.085,511.926,222.412"/>
+		<path clip-path="url(#SVGID_2_)" fill="#FFE7CB" d="M491.235,234.748c-2.562-2.95-2.118-7.433,0.985-10.015
+			c3.105-2.583,7.698-2.285,10.258,0.663c2.56,2.951,2.12,7.436-0.985,10.018C498.388,237.997,493.795,237.698,491.235,234.748"/>
+		<path clip-path="url(#SVGID_2_)" fill="#FFECC7" d="M492.53,233.671c-1.97-2.27-1.63-5.721,0.76-7.709
+			c2.389-1.988,5.923-1.758,7.893,0.511c1.973,2.27,1.631,5.722-0.758,7.709C498.034,236.17,494.501,235.94,492.53,233.671"/>
+		<path clip-path="url(#SVGID_2_)" fill="#FFF7EA" d="M499.479,230.239c1.152,1.327,0.952,3.343-0.443,4.505
+			c-1.397,1.161-3.463,1.027-4.614-0.299c-1.151-1.327-0.951-3.343,0.443-4.505C496.262,228.778,498.325,228.912,499.479,230.239"/>
+		<path clip-path="url(#SVGID_2_)" fill="#FFE7CB" d="M477.598,239.592c-2.93-2.603-3.068-7.089-0.311-10.021
+			c2.762-2.932,7.372-3.199,10.303-0.597c2.93,2.602,3.066,7.088,0.309,10.02C485.139,241.927,480.525,242.193,477.598,239.592"/>
+		<path clip-path="url(#SVGID_2_)" fill="#FFECC7" d="M478.748,238.368c-2.255-2.003-2.36-5.456-0.237-7.711
+			c2.124-2.256,5.673-2.462,7.927-0.46c2.255,2.003,2.361,5.456,0.237,7.712S481.004,240.371,478.748,238.368"/>
+		<path clip-path="url(#SVGID_2_)" fill="#FFF7EA" d="M485.225,234.127c1.316,1.169,1.38,3.188,0.139,4.507
+			c-1.241,1.317-3.314,1.439-4.633,0.269c-1.316-1.171-1.379-3.188-0.138-4.507S483.908,232.957,485.225,234.127"/>
+		<path clip-path="url(#SVGID_2_)" fill="#FFE7CB" d="M514.292,217.521c-2.561-2.948-2.118-7.433,0.986-10.015
+			c3.105-2.583,7.698-2.286,10.259,0.663c2.561,2.95,2.119,7.435-0.986,10.017C521.445,220.769,516.851,220.472,514.292,217.521"/>
+		<path clip-path="url(#SVGID_2_)" fill="#FFECC7" d="M515.587,216.443c-1.97-2.269-1.63-5.72,0.76-7.708
+			c2.39-1.986,5.924-1.758,7.894,0.512c1.973,2.269,1.632,5.721-0.758,7.708C521.093,218.944,517.557,218.714,515.587,216.443"/>
+		<path clip-path="url(#SVGID_2_)" fill="#FFF7EA" d="M522.535,213.012c1.151,1.327,0.954,3.344-0.443,4.505
+			c-1.396,1.161-3.463,1.028-4.612-0.299c-1.152-1.327-0.953-3.343,0.44-4.505C519.317,211.552,521.383,211.686,522.535,213.012"/>
+	</g>
+</g>
+</svg>
+
 	</div>
 
 </body>
