slow down the fade

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-		<!--Garamond font from Google Fonts API-->
-		<link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
+		<!--Garamond font from Google Fonts API
+		<link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>-->
 
 		<!-- Custom CSS styles go in this file -->
     	<link href="css/styles.css" rel="stylesheet">
