--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
 		<p><a id="schedule" href="#schedule-section">schedule</a></p>
 	</div>
 	<div id="right" class="menu">
-		<p><a href="contact.html">contact</a></p>
-		<p><a href="resources.html">resources</a></p>
+		<p><a href="mailto:hello@pearlhacks.com">contact</a></p>
+		<p><a href="2014/resources.html">resources</a></p>
 	</div>
 
 	<div id="girl">
-		<svg id="girl-svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="400px" height="410px" viewBox="0 0 400 410" enable-background="new 0 0 400 410" xml:space="preserve">
+		<div id="girl-svg">
+		<svg version="1.1" preserveAspectRatio="xMinYMin meet" class="svg-content"viewBox="0 0 400 410">
 			<path id="legs" fill="#212120" d="M145.387,305.699c0,0-57.083-21.895-90.97-22.938c0,0-24.5-1.564-19.027,27.367c0,0,2.933,15.51,41.705,33.365c0,0,12.838,5.408,21.374,8.861c0,0-7.167,26.457,1.825,38.969c0,0,7.706,5.676,17.594-3.52c0,0,6.862-6.555,20.331-9.775c0,0,25.503-5.691,47.008-6.865c0,0,23.272,1.086,62.075,8.076c0,0,15.197,2.26,30.278,5.52c0,0,13.169,2.74,21.722,5.781c0,0,11.031,4.792,17.985,0.783c0,0,8.603-5.084-1.017-37.01c0,0,15.483-9.518,34.771-25.158c0,0,12.772-10.164,10.688-22.938c0,0-1.304-21.895-28.15-19.029c0,0-26.457,3.26-63.861,19.027C269.719,306.217,220.457,328.111,145.387,305.699z"/>
 			<path id="face" fill="#212120" d="M154.77,64.07c0,0-13.293,32.842,13.553,57.344c0,0,0.522,13.033-13.293,25.805c0,0,10.687,26.848,37.273,27.109c0,0,34.146-9.645,37.014-44.832c0,0-14.337-8.082-17.986-18.248c0,0,11.209-39.357-15.117-59.949C196.214,51.298,169.888,35.66,154.77,64.07z"/>
 			<path id="shirt" fill="#212120" d="M140.858,141.99l-12.12,1.955c0,0-10.948,0.979-16.031,18.768c0,0-5.865,18.768-10.165,35.971c0,0,14.857,10.947,42.616,16.42c0,0,17.204,35.189,13.685,64.902l91.881,5.475c0,0-4.822-39.098-2.477-55.91c0,0,0.521-5.213,3.129-10.035c0,0,3.128-5.084,3.258-13.684l1.656,2.391c0,0,25.321-22.07,28.841-39.273c0,0-9.775-14.076-25.023-29.715c0,0-12.512-14.076-22.286-13.686l-10.557,0.393c0,0-0.781,21.504-26.587,31.277C200.678,157.238,167.444,169.75,140.858,141.99z"/>
@@ -189,6 +190,7 @@
 		C241.653,316.957,241.52,316.835,241.442,316.675z"/>
 	</g>
 	</svg>
+	</div>
 		<h2 class="date">March 21 - 22, 2015</h2>
 		<h2 class="location">The University of North Carolina</h2>
 		<h2 class="tagline">Open to all high school and college women</h2>
@@ -210,10 +212,11 @@
 		<div class="color-section" id="blue" onmouseover="blueGirl()"></div>
 		<div class="color-section" id="purple" onmouseover="purpleGirl()"></div>
 	</div>
-<a href="#girl"><svg id="down-triangle" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-			 width="430px" height="150px" viewBox="0 0 430 150" enable-background="new 0 0 430 150" xml:space="preserve">
+
+	<div id="down-triangle">
+<a href="#girl"><svg version="1.1" viewBox="0 0 430 150" preserveAspectRatio="xMinYMin meet" class="svg-content" xml:space="preserve">
 			<g>
-			<path id="shape" fill="#A27994" d="M225.15,126.753c-6.493,4.028-17.096,3.993-23.562-0.079L4.256,2.403C-2.21-1.668-1.248-5.012,6.393-5.027
+			<path class="shape" fill="#A27994" d="M225.15,126.753c-6.493,4.028-17.096,3.993-23.562-0.079L4.256,2.403C-2.21-1.668-1.248-5.012,6.393-5.027
 				l194.111-0.375c7.641-0.016,20.145-0.016,27.786-0.001l195.317,0.377c7.641,0.015,8.58,3.322,2.087,7.351L225.15,126.753z"/>
 			</g>
 			<rect x="-295" y="-140" fill="none" width="1024" height="709"/>
@@ -332,14 +335,25 @@
 		c0.071,0.217,0.049,0.428-0.062,0.627c-0.108,0.199-0.265,0.336-0.467,0.405c-0.201,0.07-0.4,0.052-0.601-0.061
 		S257.291,74.996,257.221,74.814z"/>
 </g>
-		</svg></a>
+		</svg></a></div>
+		<div id="down-triangle-mobile"><a href="register.html">
+	<svg version="1.1" viewBox="0 0 430 150" preserveAspectRatio="xMinYMin meet" class="svg-content" xml:space="preserve">
+<g>
+	<path class="shape" fill="#A27994" d="M225.15,126.753c-6.493,4.028-17.096,3.993-23.562-0.079L4.256,2.403C-2.21-1.668-1.248-5.012,6.393-5.027
+		l194.111-0.375c7.641-0.016,20.145-0.016,27.786-0.001l195.317,0.377c7.641,0.015,8.58,3.322,2.087,7.351L225.15,126.753z"/>
+</g>
+<rect x="-295" y="-140" fill="none" width="1024" height="709"/>
+<rect x="126.998" y="24.109" fill="none" width="173.991" height="92.496"/>
+<text transform="matrix(1 0 0 1 153.5459 49.3594)"><tspan x="0" y="0" fill="#FFFFFF" font-family="'LittleMissPriss'" font-size="50" letter-spacing="2">Register</tspan><tspan x="34.573" y="44" fill="#FFFFFF" font-family="'LittleMissPriss'" font-size="50" letter-spacing="2">now</tspan></text>
+</svg>
+</a></div>
 	<div id="about-section">
 		<p id="intro">Pearl Hacks is a weekend event bringing together women from all over the United States to work on projects with mentors from software engineering companies.
 			<br><br>
 			Hacking doesn’t mean breaking into anything - It’s breaking your ideas out of the confines of your mind and learning how to make them a reality.
 			<br><br>
 			At Pearl Hacks, we will start out with a variety of technical workshops suited for all skill levels and then encourage you to work with other participants to build something using what you learned.<br><br>
-			<strong>Register now ></strong>
+			<strong id="register-1">Register now ></strong>
 		</p>
 		<p id="middle"><em>How much does it cost?</em><br>
 				Pearl Hacks is completely free. We provide all meals (plus snacks and drinks!) while you are here, as well as a nap room and colorful swag from our sponsors.
@@ -355,6 +369,7 @@
 			<br><br>
 			<em>What should I bring?</em><br>
 				Bring your laptop, phone, chargers,<br>toiletries, a sleeping bag and pillow,<br>a change of clothes, and<br>a well-rested open mind.
+				
 		</p>
 		<svg id="side-girl" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="560px" height="560px" viewBox="0 0 560 560" enable-background="new 0 0 560 560" xml:space="preserve">
@@ -447,31 +462,59 @@
 	<div id="schedule-section">
 		<div class="left">
 			<h4><em>Saturday</em></h4>
-			<div><p class="time">8:30a.m.</p><p class="description">Registration and breakfast</p></div>
-			<div><p class="time">9:30a.m.</p><p class="description">Opening ceremony and keynote speaker</p></div>
-			<div><p class="time">10:30a.m.</p><p class="description">Workshop I (options to come)</p></div>
-			<div><p class="time">12:30p.m.</p><p class="description">Lunch and sponsor fair</p></div>
-			<div><p class="time">1:30p.m.</p><p class="description">Workshop II (options to come)</p></div>
-			<div><p class="time">3:30p.m.</p><p class="description">Break</p></div>
-			<div><p class="time">4:00p.m.</p><p class="description">Workshop III (options to come)</p></div>
-			<div><p class="time">6:00p.m.</p><p class="description">Dinner with mentors (ask them anything!)</p></div>
+			<div><p class="time">8:30a.m.</p><p class="description">Registration and breakfast</p><p class="short description">Breakfast</p></div>
+			<div><p class="time">9:30a.m.</p><p class="description">Opening ceremony and keynote</p><p class="short description">Opening ceremony</p></div>
+			<div><p class="time">10:30a.m.</p><p class="description">Workshop I (options to come)</p><p class="short description">Workshop I</p></div>
+			<div><p class="time">12:30p.m.</p><p class="description">Lunch and sponsor fair</p><p class="short description">Lunch!</p></div>
+			<div><p class="time">1:30p.m.</p><p class="description">Workshop II (options to come)</p><p class="short description">Workshop II</p></div>
+			<div><p class="time">3:30p.m.</p><p class="description">Break</p><p class="short description">Break</p></div>
+			<div><p class="time">4:00p.m.</p><p class="description">Workshop III (options to come)</p><p class="short description">Workshop III</p></div>
+			<div><p class="time">6:00p.m.</p><p class="description">Dinner with mentors (ask anything!)</p><p class="short description">Dinner with mentors</p></div>
 
-			<div><p class="time" style="text-align:center;margin:10px 0;margin-left:-20px;width:100%">Work on hackathon projects<br>
+			<div><p class="blurb time">Work on hackathon projects<br>
 			Tech talks by the Pearl Hacks sponsors</p></div>
 
-			<div><p class="time">11:00p.m.</p><p class="description">Surprise event!</p></div>
-			<div style="margin:50px"><p class="time">12:00p.m.</p><p class="description">Surprise event!</p></div>
+			<div><p class="time">11:00p.m.</p><p class="description">Surprise event!</p><p class="short description">Surprise event!</p></div>
+			<div style="margin:65px 0"><p class="time">12:00p.m.</p><p class="description">Midnight snack (Sweet or salty?)</p><p class="short description">Midnight snack</p></div>
 			
 		</div>
 		<div class="right">
 			<h4><em>Sunday</em></h4>
-			<div><p class="time">8:30a.m.</p><p class="description">Registration and breakfast</p></div>
-			<div><p class="time">8:30a.m.</p><p class="description">Registration and breakfast</p></div>
-			<div><p class="time">8:30a.m.</p><p class="description">Registration and breakfast</p></div>
-			<div><p class="time">8:30a.m.</p><p class="description">Registration and breakfast</p></div>
-			<div><p class="time">8:30a.m.</p><p class="description">Registration and breakfast</p></div>
-			<div><p class="time">8:30a.m.</p><p class="description">Registration and breakfast</p></div>
-			<div><p class="time">8:30a.m.</p><p class="description">Registration and breakfast</p></div>
+			<div><p class="time">8:00a.m.</p><p class="description">Breakfast</p><p class="short description">Breakfast</p></div>
+			<div><p class="time">9:00a.m.</p><p class="description">Yoga and massage area opens</p><p class="short description">Yoga/massages</p></div>
+			<div><p class="time">11:00a.m.</p><p class="description">Workshop: "How to demo"</p><p class="short description">"How to demo"</p></div>
+			<div><p class="time">12:30p.m.</p><p class="description">Submit final projects and lunch!</p><p class="short description">Stop work and lunch!</p></div>
+			<div><p class="time">1:00p.m.</p><p class="description">Demo fair I</p><p class="short description">Demo fair I</p></div>
+			<div><p class="time">2:00p.m.</p><p class="description">Demo fair II</p><p class="short description">Demo fair II</p></div>
+			<div><p class="time">3:30p.m.</p><p class="description">Closing ceremony and prizes</p><p class="short description">Closing ceremony</p></div>
+			<div><p class="time">4:30p.m.</p><p class="description">Pack up and say goodbye</p><p class="short description">Pack up</p></div>
+			<div><p class="time">5:00p.m.</p><p class="description">Out-of-town busses leave</p><p class="short description">Busses leave</p></div>
+			<div><p class="time"> &nbsp;&nbsp;&nbsp;</p><p class="description">Shuttles to the airport available</p><p class="short description">Shuttles to airport</p></div>
+			<h4><strong>Questions? &nbsp;<a href="mailto:hello@pearlhacks.com">hello@pearlhacks.com</a></strong></h4>
+		</div>
+	</div>
+	<div id="sponsors-section">
+		<h4><em>Thank you to the sponsors of Pearl Hacks</em></h4>
+		<p><strong><a href="">Become a sponsor today</a>!</strong></p>
+		<div id="sponsors-grid">
+			<img class="platinum" src="sponsors/google.png">
+			<img class="platinum" src="sponsors/capitalone.png">
+			<img class="platinum" src="sponsors/teradata.png">
+			<img class="platinum" src="sponsors/fidelity.png">
+			<img class="platinum" src="sponsors/cisco.png">
+			<img class="platinum" src="sponsors/infusion.png">
+			<img class="gold" src="sponsors/willowtree.png">
+			<img class="gold" src="sponsors/pebble.png">
+			<img class="gold" src="sponsors/redhat.png">
+			<img class="silver" src="sponsors/creditsuisse.png">
+			<img class="copper" src="sponsors/wics.png">
+			<img class="copper" src="sponsors/computerscience.png">
+			<img class="ph copper" src="sponsors/pearlhacks.png">
+			<img class="copper" src="sponsors/innovatecarolina.png">
+			<img class="copper" src="sponsors/jomc.png">
+
+
+			
 		</div>
 	</div>
 
