--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Pearl Hacks</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="width=device-width">
 		<meta name="description" content="" />
 		<meta name="keywords" content="Pearl Hacks Women Hackathon Girl High school college UNC North Carolina Chapel Hill" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
