setting up the form

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 			Hacking doesn’t mean breaking into anything - It’s breaking your ideas out of the confines of your mind and learning how to make them a reality.
 			<br><br>
 			At Pearl Hacks, we will start out with a variety of technical workshops suited for all skill levels and then encourage you to work with other participants to build something using what you learned.<br><br>
-			<strong id="register-1">Register now ></strong>
+			<strong id="register-1"><a href="http://goo.gl/forms/ar946pGYp1">Register now ></a></strong>
 		</p>
 		<p id="middle"><em>How much does it cost?</em><br>
 				Pearl Hacks is completely free. We provide all meals (plus snacks and drinks!) while you are here, as well as a nap room and colorful swag from our sponsors.
