resources phase 2 plus other randoms

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<link rel="shortcut icon" href="MLH_small.png" type="image/x-icon">
 		<title>Pearl Hacks</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width">
@@ -9,8 +10,8 @@
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-		<!--Garamond font from Google Fonts API
-		<link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>-->
+		<!--Open Sans font from Google Fonts API-->
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 
 		<!-- Custom CSS styles go in this file -->
     	<link href="css/styles.css" rel="stylesheet">
@@ -27,12 +28,12 @@
 	</head>
 <body>
 	<div id="left" class="menu">
-		<p><a id="register" href="#about-section">register</a></p>
+		<p><a id="register" href="http://goo.gl/forms/ar946pGYp1" target="_blank">register</a></p>
 		<p><a id="schedule" href="#schedule-section">schedule</a></p>
 	</div>
 	<div id="right" class="menu">
 		<p><a href="mailto:hello@pearlhacks.com">contact</a></p>
-		<p><a href="2014/resources.html">resources</a></p>
+		<p><a href="resources.html">resources</a></p>
 	</div>
 
 	<div id="girl">
@@ -468,7 +469,7 @@
 			Hacking doesn’t mean breaking into anything - It’s breaking your ideas out of the confines of your mind and learning how to make them a reality.
 			<br><br>
 			At Pearl Hacks, we will start out with a variety of technical workshops suited for all skill levels and then encourage you to work with other participants to build something using what you learned.<br><br>
-			<strong id="register-1"><a href="http://goo.gl/forms/ar946pGYp1">Register now ></a></strong>
+			<strong id="register-1"><a href="http://goo.gl/forms/ar946pGYp1" target="_blank">Register now ></a></strong>
 		</p>
 		<p id="middle"><em>How much does it cost?</em><br>
 				Pearl Hacks is completely free. We provide all meals (plus snacks and drinks!) while you are here, as well as a nap room and colorful swag from our sponsors.
