--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 		<!--Open Sans font from Google Fonts API-->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 
+		<!-- BOOTSTRAP -->
+    	<link href="css/bootstrap.min.css" rel="stylesheet">
+
+    	<!-- JavaScript go in this file -->
+    	<script src="js/bootstrap.min.js"></script>
+
 		<!-- Custom CSS styles go in this file -->
     	<link href="css/styles.css" rel="stylesheet">
 
@@ -27,6 +33,7 @@
 
 	</head>
 <body>
+	<div id="menu-wrapper">
 	<div id="left" class="menu">
 		<p><a id="register" href="http://goo.gl/forms/ar946pGYp1" target="_blank">register</a></p>
 		<p><a id="schedule" href="#schedule-section">schedule</a></p>
@@ -34,6 +41,7 @@
 	<div id="right" class="menu">
 		<p><a href="mailto:hello@pearlhacks.com">contact</a></p>
 		<p><a href="resources.html">resources</a></p>
+	</div>
 	</div>
 
 	<div id="girl">
@@ -633,6 +641,7 @@
 			
 		</div>
 	</div>
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
