--- a/resourcesA.html
+++ b/resourcesA.html
@@ -343,18 +343,23 @@
 http://www.karenx.com/blog/how-to-become-a-designer-without-going-to-design-school" target="_blank">How to become a designer without going to design school</a>.</p>
 		
 		<h2>Communities and Organizations</h2>
-		https://www.facebook.com/groups/LadiesStormHackathons/
-https://girlswhocode.com/
-http://www.ncwit.org/
-http://www.girldevelopit.com/
-https://www.madewithcode.com/
-http://www.aauw.org/
-http://anitaborg.org/
-http://railsgirls.com/
-http://ignite.globalfundforwomen.org/
-http://www.sheplusplus.org/
-https://www.doubleunion.org/
+		
+		<p class="org"><a href="http://girlswhocode.com" target="_blank"><img src="organizations/girlswhocode.png"></a></p>
+		<p class="org"><a href="http://www.facebook.com/groups/LadiesStormHackathons" target="_blank"><img src="organizations/ladiesstorm.png"></a></p>
+		<p class="org"><a href="http://www.madewithcode.com" target="_blank"><img src="organizations/madewithcode.png"></a></p>
+		<p class="org"><a href="http://www.girldevelopit.com" target="_blank"><img src="organizations/girldevelopit.png"></a></p>
+		<p class="org"><a href="http://ignite.globalfundforwomen.org" target="_blank"><img src="organizations/ignite.jpg"></a></p>
+		<p class="org"><a href="http://leanincircles.org" target="_blank"><img src="organizations/leanin.png"></a></p>
+		<p class="org"><a href="http://anitaborg.org" target="_blank"><img src="organizations/anitaborg.jpg"></a></p>
+		<p class="org"><a href="http://www.pyladies.com" target="_blank"><img src="organizations/pyladies.jpeg"></a></p>
 
+		
+		<p class="org"><a href="http://www.sheplusplus.org" target="_blank"><img src="organizations/sheplusplus.png"></a></p>
+		<p class="org"><a href="http://www.aauw.org" target="_blank"><img src="organizations/aauw.png"></a></p>
+		<p class="org"><a href="http://railsgirls.com" target="_blank"><img src="organizations/railsgirls.png"></a></p>
+		
+		<p class="org"><a href="http://www.ncwit.org" target="_blank"><img src="organizations/ncwit.png"></a></p>
+		
 
 	</div>
 	<div class="events wrapper">
@@ -363,6 +368,7 @@ https://www.doubleunion.org/
 		<p><a href="http://squareup.com/code-camp" target="_blank"><img src="events/codecamp.png"></a></p>
 		<p><a href="http://www.wecodeharvard.com" target="_blank"><img src="events/wecode.png"></a></p>	
 		<p><a href="http://www.hackduke.com" target="_blank"><img src="events/hackduke.png"></a></p>	
+		<p><a href="http://www.hacknc.us" target="_blank"><img src="events/hacknc.svg"></a></p>
 		<p><a href="http://www.mtholyoke.edu/org/compsci/hackholyoke" target="_blank"><img src="events/hackholyoke.png"></a></p>
 		<p><a href="http://www.fashiontechhackathon.com" target="_blank"><img src="events/fashionhack.png"></a></p>
 		<p><a href="http://hackbeanpot.com" target="_blank"><img src="events/hackbeanpot.png"></a></p>
