--- a/index2.html
+++ b/index2.html
@@ -18,6 +18,8 @@
 
 		<!-- BOOTSTRAP -->
     	<link href="css/bootstrap.min.css" rel="stylesheet">
+
+    	<!-- JavaScript go in this file -->
     	<script src="js/bootstrap.min.js"></script>
 
 		<!-- Custom CSS styles go in this file -->
