--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<nav id="menu-wrapper" class="navbar navbar-default navbar-fixed-top">
 		<div class="row">
 			<div class="menu col-md-2 col-sm-2">
-				<a href="#about-section">register</a>
+				<a href="http://goo.gl/forms/ar946pGYp1">register</a>
 			</div>
 			<div class="menu col-md-2 col-sm-2">
 				<a href="#schedule-section">schedule</a>
@@ -345,7 +345,7 @@
 			c0.071,0.217,0.049,0.428-0.062,0.627c-0.108,0.199-0.265,0.336-0.467,0.405c-0.201,0.07-0.4,0.052-0.601-0.061S257.291,74.996,257.221,74.814z"/></g>
 			</svg>
 		</div>
-		<div id="down-triangle-mobile">
+		<div id="down-triangle-mobile"><a href="http://goo.gl/forms/ar946pGYp1">
 			<svg version="1.1" viewBox="0 0 430 150" preserveAspectRatio="xMinYMin meet" class="svg-content" ><g>
 			<path class="shape" fill="#A27994" d="M225.15,126.753c-6.493,4.028-17.096,3.993-23.562-0.079L4.256,2.403C-2.21-1.668-1.248-5.012,6.393-5.027
 			l194.111-0.375c7.641-0.016,20.145-0.016,27.786-0.001l195.317,0.377c7.641,0.015,8.58,3.322,2.087,7.351L225.15,126.753z"/></g>
@@ -463,7 +463,7 @@
 			c-0.167,0.367-0.384,0.684-0.65,0.95c-0.667,0.733-1.583,1.133-2.75,1.199c-0.8,0.033-1.467-0.1-2-0.399
 			c-0.467-0.233-0.967-0.683-1.5-1.351c-0.434-0.566-0.783-1.6-1.05-3.1c-0.167-1.033-0.268-2.449-0.3-4.25
 			c-0.034-1.3-0.034-2.832,0-4.6l0.05-2.9c0-0.5,0.258-0.75,0.775-0.75C224.309,76.309,224.567,76.559,224.567,77.059z"/></g>
-			</svg>
+			</svg></a>
 		</div>
 		<div id="about-text">
 			<div id="intro" class="col-sm-12 col-md-3">
@@ -696,12 +696,14 @@
 			<img class="col-xs-8 col-xs-offset-2 col-sm-3 col-sm-offset-2" src="sponsors/willowtree.png">
 		</div>
 		<div class="gold row">
-			<img class="col-xs-6 col-xs-offset-3 col-sm-3 col-sm-offset-2" src="sponsors/pebble.png">
-			<img class="col-xs-6 col-xs-offset-3 col-sm-3 col-sm-offset-2" src="sponsors/redhat.png">
+			<img class="col-xs-6 col-xs-offset-3 col-sm-3 col-sm-offset-1" src="sponsors/pebble.png">
+			<img class="col-xs-6 col-xs-offset-3 col-sm-3 col-sm-offset-1" src="sponsors/redhat.png">
+			<img class="col-xs-6 col-xs-offset-3 col-sm-3 col-sm-offset-1" src="sponsors/renci.jpg">
 			<!--<img src="sponsors/redhat.png">-->
 		</div>
 		<div class="silver row">
 			<img class="col-xs-6 col-xs-offset-3 col-sm-3 col-sm-offset-2" src="sponsors/creditsuisse.png">
+			<img class="col-xs-6 col-xs-offset-3 col-sm-3 col-sm-offset-2" src="sponsors/vanguard.jpg">
 			<!--<img class="col-sm-2 col-sm-offset-1" src="sponsors/creditsuisse.png">
 			<img class="col-sm-2 col-sm-offset-1" src="sponsors/creditsuisse.png">-->
 		</div>
